# dronmakr

./: .env-sample  .gitignore  CLI.md  LICENSE  README.md  audio_host.py  audio_worker.py  auditionr.py  backend.spec  backend_server.py  beatbuildr.py  beatmakr.py  build_desktop.ps1  build_desktop.sh  build_preset.py  bump_version.sh  bundle_paths.py  config_validation.py  desktop.spec  desktop_app.py  desktop_native_dialog.py  desktop_update_install.py  desktop_update_ui.py  dronmakr.py  dsp.py  example.mid  folysplitr.py  generate_bass.py  generate_midi.py  generate_reese.py  generate_sample.py  generate_transition.py  generatr.py  package-lock.json  package.json  patchcraftr_gui.py  patchcraftr_live_monitor.py  patchcraftr_rth_tk.py  paths.py  paulstretch.py  (+18 more)
.cursor/: rules
backend/: backend.spec  backend_server.py
design/: logo.psd
docs/: e2e-vm-setup.md  testing-plan.md
hooks/: hook-pedalboard.py
resources/: beat-patterns-sample.json  beat-patterns.json  chord-scale-data.json  chords.json  post-processing-shortcuts-sample.json
scripts/: backfill_release_notes.sh  build_app.ps1  build_app.sh  build_frontend.py  build_linux.sh  build_mac_app_icns.sh  build_sidecar.ps1  build_sidecar.sh  build_windows_app_ico.py  bump_and_release.sh  bump_version.py  bump_version.sh  compose_mac_app_icon_layer.py  compose_windows_app_icon_layer.py  dev_backend.sh  ensure_sidecar_placeholder.sh  ffmpeg_vendor_checksums.tsv  generate_release_notes.py  generate_release_notes.sh  generate_tray_icons.py  gh_release_latest_tag.sh  linux_build_deps.sh  linux_release_readme.txt  package_mac_dmg.sh  pre_release_checks.sh  release_notes_template.md  reproduce_soundfile_bundle_macos.sh  sign_mac_app.sh  stage_sidecar_onedir_dist.py  vendor_ffmpeg.py  verify_frozen_soundfile_macos.py  verify_macos_app_launch.sh  windows_release_readme.txt
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: dronmakr-backend-aarch64-apple-darwin
src-tauri/binaries/placeholders/: dronmakr-backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-copy-files-to-clipboard.toml
src-tauri/src/: clipboard.rs  lib.rs  main.rs  startup_log.rs
templates/: _app_css_root.html  (+14 more)
(+233 files in other folders)
