[package]
name = "dronmakr"
version = "0.51.0"
description = "dronmakr desktop app"
authors = ["Nafeu"]
edition = "2021"

[lib]
name = "dronmakr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
