[package]
name = "dronmakr"
version = "0.57.3"
description = "dronmakr desktop app"
authors = ["Nafeu"]
edition = "2021"

[lib]
name = "dronmakr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", features = ["json"] }
tauri-plugin-macos-fps = "0.1"
tauri-plugin-drag = "2.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
